--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <title>AppsGeyser</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500i,600,700,800" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="vendors/animate/animateCss.css">
-    <link rel="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/style.css">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/onepage-scroll/1.3.1/jquery.onepage-scroll.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <header class="header fadeIn wow" data-wow-duration="2s">
@@ -53,10 +51,14 @@
             <div class="col-md-5">
                 <h1 class="title fadeIn wow" data-wow-duration="2s">The <b>Faster</b> and The <b>Simplest</b> App Builder for your app creation.</h1>
                 <h3 class="subtitle fadeIn wow" data-wow-delay="1s">— Without any coding and fees</h3>
-                <button class="btn btn-create-app fadeIn wow" data-wow-delay="3s">Create Now for FREE</button>
+                <button class="btn btn-create-app fadeIn wow" data-wow-delay="2s">Create Now for FREE</button>
             </div>
             <div class="col-md-7 relative">
                 <div class="banner-bg fadeIn wow" data-wow-delay="2s"></div>
+                <div class=" banner-bg-2 wobble wow" data-wow-delay="2.5s"></div>
+                <div class="banner-bg banner-bg-3 wobble2 wow" data-wow-delay="2.5s"></div>
+                <div class="banner-bg banner-bg-4 wobble3  wow" data-wow-delay="2.7s"></div>
+                <div class="banner-bg banner-bg-5 wobble4  wow" data-wow-delay="2.7s"></div>
             </div>
         </div>
     </div>
@@ -81,8 +83,9 @@
                 <div class="paint-can bounceInDown wow" data-wow-delay="1.5s"></div>
                 <div class="money bounceInDown wow" data-wow-delay="2s"></div>
                 <div class="gift-box bounceInDown wow" data-wow-delay="2s"></div>
-                <div class="clock bounceInDown wow" data-wow-delay="2.5s"></div>
-                <div class="book bounceInDown wow" data-wow-delay="2.5s"></div>
+                <div class="clock bounceInDown wow" data-wow-delay="2.2s"></div>
+                <div class="book bounceInDown wow" data-wow-delay="2.2s"></div>
+                <div id="animate-about-us"></div>
             </div>
         </div>
     </div>
@@ -119,7 +122,7 @@
                 </div>
             </div>
             <div class="col-12">
-                <button class="btn btn-create-app fadeIn wow" data-wow-delay="4.3s">Create Now for FREE</button>
+                <button class="btn btn-create-app fadeIn wow" data-wow-delay="3s">Create Now for FREE</button>
             </div>
         </div>
     </div>
@@ -182,7 +185,7 @@
                 </div>
             </div>
             <div class="col-12">
-                <button class="btn btn-create-app fadeIn wow" data-wow-delay="4s">Create Now for FREE</button>
+                <button class="btn btn-create-app fadeIn wow" data-wow-delay="3s">Create Now for FREE</button>
             </div>
         </div>
     </div>
@@ -203,10 +206,10 @@
             </div>
             <div class="col">
                 <div class="banner">
-                    <div class="external-bg green-bg fadeIn wow" data-wow-delay="3.5s"></div>
+                    <div class="external-bg green-bg fadeIn wow" data-wow-delay="3s"></div>
                     <div class="content">
-                        <div class="content-bg left-hand bounceInDown wow" data-wow-delay="2.5s"></div>
-                        <div class="content-bg right-hand bounceInDown wow" data-wow-delay="2.5s"></div>
+                        <div class="content-bg left-hand bounceInDown wow" data-wow-delay="2s"></div>
+                        <div class="content-bg right-hand bounceInDown wow" data-wow-delay="2s"></div>
                     </div>
                 </div>
             </div>
@@ -215,10 +218,10 @@
                 <p class="text-pink fadeIn wow" data-wow-delay="2s">We in AppsGeyser believe that the power of makers must be unlimited. So we don’t introduce paid features, don’t offer any paid subscription plans, everything is <b>free</b>.</p>
             </div>
             <div class="col">
-                <p class="text-green fadeIn wow" data-wow-delay="3.5s">Instead we monetize through transparent <b>50/50</b> revenur share on ads. So we only profit when you profit and interested in your success</p>
+                <p class="text-green fadeIn wow" data-wow-delay="2.7s">Instead we monetize through transparent <b>50/50</b> revenur share on ads. So we only profit when you profit and interested in your success</p>
             </div>
             <div class="col-8 offset-2">
-                <p class="business-offer zoomIn wow" data-wow-delay="4s">If you are here for a business app, we offer those for free without any ads. Just a little gift for you. Consider adding a small app business to your existing one.</p>
+                <p class="business-offer zoomIn wow" data-wow-delay="2.7s">If you are here for a business app, we offer those for free without any ads. Just a little gift for you. Consider adding a small app business to your existing one.</p>
             </div>
         </div>
     </div>
@@ -301,15 +304,15 @@
                 <div class="calculate fadeIn wow" data-wow-delay="2s">
                     <div class="calculate-item">
                         <p class="title zoomIn wow" data-wow-delay="2.5s">7 000 +</p>
-                        <p class="subtitle fadeIn wow" data-wow-delay="3s">Apps Created Every Day</p>
+                        <p class="subtitle fadeIn wow" data-wow-delay="2.8s">Apps Created Every Day</p>
                     </div>
                     <div class="calculate-item">
                         <p class="title zoomIn wow" data-wow-delay="2.5s">6 000 000 +</p>
-                        <p class="subtitle fadeIn wow" data-wow-delay="3s">Total Apps Created All Over The World</p>
+                        <p class="subtitle fadeIn wow" data-wow-delay="2.8s">Total Apps Created All Over The World</p>
                     </div>
                     <div class="calculate-item">
                         <p class="title zoomIn wow" data-wow-delay="2.5s">800 000 +</p>
-                        <p class="subtitle fadeIn wow" data-wow-delay="3s">App Installation Per Day</p>
+                        <p class="subtitle fadeIn wow" data-wow-delay="2.8s">App Installation Per Day</p>
                     </div>
                 </div>
             </div>
@@ -320,7 +323,7 @@
     <div class="container">
         <div class="row no-gutters">
             <div class="col-12">
-                <h2 class="title zoomIn wow">Choose from Over <b>70</b> App Templates</h2>
+                <h2 class="title zoomIn wow" data-wow-delay="1s">Choose from Over <b>70</b> App Templates</h2>
             </div>
             <div class="col-6 offset-3">
                 <h3 class="subtitle fadeIn wow" data-wow-delay="1s">AppsGeyser offers the largest number of diverse customizable templates and presets for you to create an app from</h3>
@@ -328,8 +331,8 @@
             <div class="col-12">
                 <div id="carouselExampleIndicators" class="carousel slide" data-interval="false">
                     <div class="button-container">
-                        <a class="button-prev fadeIn wow" data-wow-delay="3.5s" href="#carouselExampleIndicators" role="button" data-slide="prev"></a>
-                        <a class="button-next fadeIn wow" data-wow-delay="3.5s" href="#carouselExampleIndicators" role="button" data-slide="next"></a>
+                        <a class="button-prev fadeIn wow" data-wow-delay="2s" href="#carouselExampleIndicators" role="button" data-slide="prev"></a>
+                        <a class="button-next fadeIn wow" data-wow-delay="2s" href="#carouselExampleIndicators" role="button" data-slide="next"></a>
                     </div>
                     <div class="carousel-inner slider">
                         <div class="carousel-item">
@@ -402,7 +405,7 @@
             </div>
 
             <div class="col-12">
-                <button class="btn btn-create-app fadeIn wow" data-wow-delay="1.5s">Create Now for FREE</button>
+                <button class="btn btn-create-app fadeIn wow" data-wow-delay="1s">Create Now for FREE</button>
             </div>
         </div>
     </div>
@@ -476,47 +479,16 @@
     </div>
 </footer>
 
-<script src="js/comments-slider.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 <script src="https://www.appsgeyser.com/js/datamaps.world.min.js"></script>
-<script src="js/map.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.js" type="text/javascript"></script>
-<!--<script>-->
-    <!--var animation = bodymovin.loadAnimation({-->
-        <!--container: document.getElementById('phone'), // Required-->
-        <!--path: 'appG.json', // Required-->
-        <!--renderer: 'svg', // Required-->
-        <!--loop: true, // Optional-->
-        <!--autoplay: true, // Optional-->
-        <!--name: "Hello World" // Name for future reference. Optional.-->
-    <!--})-->
-<!--</script>-->
-<script>
-    new WOW().init();
-    var clock;
-    clock = $('#clock').FlipClock({
-        clockFace : 'HourCounter',
-        autoStart : false,
-        callbacks : {
-            stop : function () {
-                $('#message').html('Time out');
-            }
-        }
+<script src="js/comments-slider.min.js"></script>
+<script src="js/map.js"></script>
+<script src="js/animation.js"></script>
+<script src="js/counter.min.js"></script>
 
-    });
-
-    var dt = 'July 22 2015 14:38:20';
-    var first = new Date(dt);
-    var last = Date.now();
-    var remaining = first - last;
-    remaining /=1000;
-
-    clock.setTime(150000);
-    clock.setCountdown(true);
-    clock.start();
-</script>
 </body>
 </html>
