--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AppsGeyser</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500i,600,700,800" rel="stylesheet">
@@ -18,10 +19,11 @@
 <header class="header fadeIn wow" data-wow-duration="2s">
     <div class="container">
         <div class="row">
-            <div class="col-md-2">
-                <a href="/" class="logo">AppsGeyser</a>
+            <div class="col-2">
+                <a href="" class="logo">AppsGeyser</a>
+                <div id="logo" class="logo logo-mobile">AppsGeyser</div>
             </div>
-            <div class="col-md-7">
+            <div class="col-lg-7">
                 <nav class="header-navigation">
                     <a href="" class="navigation-item">Start Now</a>
                     <a href="" class="navigation-item">Gamemaker</a>
@@ -32,7 +34,7 @@
                     <a href="" class="navigation-item">Community</a>
                 </nav>
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3 col-md-5">
                 <div class="options-menu">
                     <button class="btn btn-language">RU</button>
                     <button class="btn btn-create-app">Create App</button>
@@ -44,6 +46,17 @@
             </div>
         </div>
     </div>
+    <nav id="mobile-navigation" class="mobile-navigation header-navigation">
+        <div class="container">
+            <a href="" class="navigation-item">Start Now</a>
+            <a href="" class="navigation-item">Gamemaker</a>
+            <a href="" class="navigation-item">Showcase</a>
+            <a href="" class="navigation-item">Contest</a>
+            <a href="" class="navigation-item">FAQ</a>
+            <a href="" class="navigation-item">Blog</a>
+            <a href="" class="navigation-item">Community</a>
+        </div>
+    </nav>
 </header>
 <section class="banner">
     <div class="container relative">
@@ -54,40 +67,40 @@
         </div>
         <div class="banner-container">
             <div class="banner-bg fadeIn wow" data-wow-delay="2s"></div>
-            <div class=" banner-bg-2 wobble  wow" data-wow-delay="2.5s"></div>
-            <div class="banner-bg banner-bg-3 wobble2 wow" data-wow-delay="2.5s"></div>
-            <div class="banner-bg banner-bg-4 wobble3  wow" data-wow-delay="2.7s"></div>
-            <div class="banner-bg banner-bg-5 wobble4  wow" data-wow-delay="2.7s"></div>
+            <div class="banner-bg banner-bg-rear banner-bg-2 wobble  wow" data-wow-delay="2.5s"></div>
+            <div class="banner-bg banner-bg-rear banner-bg-3 wobble2 wow" data-wow-delay="2.5s"></div>
+            <div class="banner-bg banner-bg-rear banner-bg-4 wobble3  wow" data-wow-delay="2.5s"></div>
+            <div class="banner-bg banner-bg-rear banner-bg-5 wobble4  wow" data-wow-delay="2.5s"></div>
         </div>
     </div>
 </section>
-<section class="about-us">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h2 class="title zoomIn wow">Free and Simple Tool to Create, Download, Distribute and Monetize Your App</h2>
-            </div>
-            <div class="w-100">
-                <div class="text-container">
-                    <p class="top-left fadeIn wow" data-wow-delay="3s">Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>
-                    <p class="top-right fadeIn wow" data-wow-delay="3s">Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>
-                    <p class="bottom-left fadeIn wow" data-wow-delay="3.5s">No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>
-                    <p class="bottom-right fadeIn wow" data-wow-delay="3.5s"><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>
-                </div>
-            </div>
+<!--<section class="about-us">-->
+    <!--<div class="container">-->
+        <!--<div class="row">-->
+            <!--<div class="col">-->
+                <!--<h2 class="title zoomIn wow">Free and Simple Tool to Create, Download, Distribute and Monetize Your App</h2>-->
+            <!--</div>-->
+            <!--<div class="w-100">-->
+                <!--<div class="text-container">-->
+                    <!--<p class="top-left fadeIn wow" data-wow-delay="3s">Create your own app empire and make up to <b>$6,000</b> monthly passive income.</p>-->
+                    <!--<p class="top-right fadeIn wow" data-wow-delay="3s">Absolutely <b>free forever</b>. No monthly charges, no fees, no paid features.</p>-->
+                    <!--<p class="bottom-left fadeIn wow" data-wow-delay="3.5s">No needs in coding skills: <b>70+</b> app templates to create your Android app in 2 minutes</p>-->
+                    <!--<p class="bottom-right fadeIn wow" data-wow-delay="3.5s"><b>Easy tutorials</b> and weekly updating knowledge base: We have multiple step-by-step guide on app creation, publication and promotion.</p>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div id="phone" class="phone fadeIn wow" data-wow-delay="1s">
-                <div class="message bounceInDown wow" data-wow-delay="1.5s"></div>
-                <div class="paint-can bounceInDown wow" data-wow-delay="1.5s"></div>
-                <div class="money bounceInDown wow" data-wow-delay="2s"></div>
-                <div class="gift-box bounceInDown wow" data-wow-delay="2s"></div>
-                <div class="clock bounceInDown wow" data-wow-delay="2.2s"></div>
-                <div class="book bounceInDown wow" data-wow-delay="2.2s"></div>
-                <div id="animate-about-us"></div>
-            </div>
-        </div>
-    </div>
-</section>
+            <!--<div id="phone" class="phone fadeIn wow" data-wow-delay="1s">-->
+                <!--<div class="message bounceInDown wow" data-wow-delay="1.5s"></div>-->
+                <!--<div class="paint-can bounceInDown wow" data-wow-delay="1.5s"></div>-->
+                <!--<div class="money bounceInDown wow" data-wow-delay="2s"></div>-->
+                <!--<div class="gift-box bounceInDown wow" data-wow-delay="2s"></div>-->
+                <!--<div class="clock bounceInDown wow" data-wow-delay="2.2s"></div>-->
+                <!--<div class="book bounceInDown wow" data-wow-delay="2.2s"></div>-->
+                <!--<div id="animate-about-us"></div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</section>-->
 <section class="steps">
     <div class="container">
         <div class="row">
@@ -129,7 +142,7 @@
     <div class="col-6 offset-3">
         <h1 class="counter-title fadeIn wow">Publish your first app in within and take part in our promotional contest to win $200</h1>
     </div>
-    <div class="col-6 offset-3 fadeIn wow" data-wow-delay="1s">
+    <div class="col-lg-6 offset-lg-3 fadeIn wow" data-wow-delay="1s">
         <div id="clock"></div>
     </div>
 </section>
@@ -140,42 +153,42 @@
                 <h2 class="title fadeIn wow">Meet Our Main Benefits Becoming Yours</h2>
             </div>
 
-            <div class="col-4">
+            <div class="col-6 col-lg-4">
                 <div class="benefits-item">
                     <div class="icon icon-lightning fadeInUp wow" data-wow-delay="1s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="1.3s">Fasters app builder</h3>
                     <p class="fadeInUp wow" data-wow-delay="1.6s">30 seconds to compile your app, no need to wait</p>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-6 col-lg-4">
                 <div class="benefits-item">
                     <div class="icon icon-clock fadeInUp wow" data-wow-delay="1.3s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="1.6s">Easiest App Builder Out There</h3>
                     <p class="fadeInUp wow" data-wow-delay="2s">You can create an app in 2 minutes</p>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-6 col-lg-4">
                 <div class="benefits-item">
                     <div class="icon icon-phone fadeInUp wow" data-wow-delay="1.6s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="2s">A Lot of Templates</h3>
                     <p class="fadeInUp wow" data-wow-delay="2.3s">Over 70 templates to express yourself and experiments</p>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-6 col-lg-4">
                 <div class="benefits-item">
                     <div class="icon icon-book fadeInUp wow" data-wow-delay="2s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="2.3s">Tutorials and Guides</h3>
                     <p class="fadeInUp wow" data-wow-delay="2.6s">We give away step-by-step guides to create, publish, promote and monetize your apps</p>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-6 col-lg-4">
                 <div class="benefits-item">
                     <div class="icon icon-medal fadeInUp wow" data-wow-delay="2.3s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="2.6s">We're Interested in Your Success</h3>
                     <p class="fadeInUp wow" data-wow-delay="3s">We will teach you to create popular apps</p>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-6 col-lg-4">
                 <div class="benefits-item">
                     <div class="icon icon-hand fadeInUp wow" data-wow-delay="2.6s"></div>
                     <h3 class="subtitle fadeInUp wow" data-wow-delay="3s">Complete Experience</h3>
@@ -194,15 +207,16 @@
             <div class="col-12">
                 <h2 class="title fadeIn wow">Wait! How are you completely free?</h2>
             </div>
-            <div class="col">
+            <div class="col-lg col-12">
                 <div class="banner">
                     <div class="external-bg pink-bg fadeIn wow" data-wow-delay="2s"></div>
                     <div class="content fadeIn wow" data-wow-delay="1s">
                         <div class="subscription"></div>
                     </div>
                 </div>
+                <p class="text-pink fadeIn wow" data-wow-delay="2s">We in AppsGeyser believe that the power of makers must be unlimited. So we don’t introduce paid features, don’t offer any paid subscription plans, everything is <b>free</b>.</p>
             </div>
-            <div class="col">
+            <div class="col-lg col-12">
                 <div class="banner">
                     <div class="external-bg green-bg fadeIn wow" data-wow-delay="3s"></div>
                     <div class="content">
@@ -210,15 +224,9 @@
                         <div class="content-bg right-hand bounceInDown wow" data-wow-delay="2s"></div>
                     </div>
                 </div>
-            </div>
-            <div class="w-100"></div>
-            <div class="col">
-                <p class="text-pink fadeIn wow" data-wow-delay="2s">We in AppsGeyser believe that the power of makers must be unlimited. So we don’t introduce paid features, don’t offer any paid subscription plans, everything is <b>free</b>.</p>
-            </div>
-            <div class="col">
                 <p class="text-green fadeIn wow" data-wow-delay="2.7s">Instead we monetize through transparent <b>50/50</b> revenur share on ads. So we only profit when you profit and interested in your success</p>
             </div>
-            <div class="col-8 offset-2">
+            <div class="col-12 col-lg-8 offset-lg-2">
                 <p class="business-offer zoomIn wow" data-wow-delay="2.7s">If you are here for a business app, we offer those for free without any ads. Just a little gift for you. Consider adding a small app business to your existing one.</p>
             </div>
         </div>
@@ -230,7 +238,7 @@
             <div class="col-12">
                 <h2 class="title zoomIn wow">What Others Say</h2>
             </div>
-            <div class="col-8 offset-2">
+            <div class="col-12 col-lg-8 offset-lg-2">
                 <div class="comments">
                    <div class="comment">
                        <h3 class="subtitle">1Just half an hour into Setapp and already loving it. You guys just filled up a huge gap in finding good, non-obtrusive app installs 🤘🏼</h3>
@@ -261,7 +269,7 @@
                    </div>
                 </div>
             </div>
-            <div class="col-9 offset-2">
+            <div class="col-12 col-lg-9 offset-lg-2">
                 <div class="slider-container">
                     <div class="slider">
                         <div class="slide" data-index="1">
@@ -323,8 +331,8 @@
             <div class="col-12">
                 <h2 class="title zoomIn wow" data-wow-delay="1s">Choose from Over <b>70</b> App Templates</h2>
             </div>
-            <div class="col-6 offset-3">
-                <h3 class="subtitle fadeIn wow" data-wow-delay="1s">AppsGeyser offers the largest number of diverse customizable templates and presets for you to create an app from</h3>
+            <div class="col-12 col-lg-6 offset-lg-3">
+                <h3 class="subtitle fadeIn wow" data-wow-delay="1.5s">AppsGeyser offers the largest number of diverse customizable templates and presets for you to create an app from</h3>
             </div>
             <div class="col-12">
                 <div id="carouselExampleIndicators" class="carousel slide" data-interval="false">
@@ -412,7 +420,7 @@
     <nav class="footer-navigation">
         <div class="container">
             <div class="row">
-                <div class="col-2">
+                <div class="col-lg-2 col-6">
                     <div class="navigation-item">
                         <h4>Appsgeyser</h4>
                         <a href="">Create</a>
@@ -421,7 +429,7 @@
                         <a href="">Showcase</a>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-lg-2 col-6">
                     <div class="navigation-item">
                         <h4>Support</h4>
                         <a href="">Request</a>
@@ -430,7 +438,7 @@
                         <a href="">Knowledge base</a>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-lg-2 col-6">
                     <div class="navigation-item">
                         <h4>Company</h4>
                         <a href="">About</a>
@@ -438,14 +446,14 @@
                         <a href="">Custom Development</a>
                     </div>
                 </div>
-                <div class="col-2">
+                <div class="col-lg-2 col-6">
                     <div class="navigation-item">
                         <h4>Contact us</h4>
                         <a href="tel:+38095235344">+38095235344</a>
                         <a href="mailto:destinee.doyle@colin.biz">destinee.doyle@colin.biz</a>
                     </div>
                 </div>
-                <div class="col-2 offset-1">
+                <div class="col-lg-2 col-12 offset-lg-1">
                     <div class="navigation-item social-network">
                         <h4>Follow Us</h4>
                         <div class="flex-container">
@@ -487,6 +495,18 @@
 <script src="js/map.js"></script>
 <script src="js/animation.js"></script>
 <script src="js/counter.min.js"></script>
+<script>
+    var logo = document.getElementById('logo'),
+        nav = document.getElementById('mobile-navigation');
 
+    function showMenu(element) {
+        element.classList.toggle('active');
+    }
+
+    logo.addEventListener('click',  function () {
+        nav.classList.toggle('active');
+    });
+
+</script>
 </body>
 </html>
